# realisation-manager-ai

./: .eslintrc.cjs  .gitignore  DEVELOPER.md  INSTALL.md  LICENSE  README.md  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_init.sql  002_add_indexes.sql
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: ai.rs  jobs.rs  media.rs  mod.rs  projects.rs  scanner.rs  search.rs  seo.rs  settings.rs  stats.rs
src-tauri/src/repositories/: ai_repo.rs  folder_rule_repo.rs  job_repo.rs  media_repo.rs  mod.rs  project_repo.rs  seo_repo.rs  settings_repo.rs
src-tauri/src/services/: ai_pipeline.rs  classifier.rs  exif.rs  job_registry.rs  mod.rs  project_detector.rs  scanner.rs  search.rs  seo_generator.rs  thumbnails.rs
src/components/: ClassificationBadge.tsx  ConfidenceBadge.tsx  EmptyState.tsx  LoadingSpinner.tsx  MediaCard.tsx  MediaGrid.tsx  Modal.tsx  ProjectCard.tsx  Sidebar.tsx  StatCard.tsx  Toast.tsx  TopNav.tsx
src/hooks/: useAIAnalysis.ts  useMedia.ts  useProjects.ts  useSeo.ts  useToast.ts
src/layouts/: MainLayout.tsx
src/lib/: constants.ts  format.ts  utils.ts
src/pages/: AIAnalysis.tsx  Dashboard.tsx  MediaLibrary.tsx  PrivacyCenter.tsx  ProjectDetail.tsx  Projects.tsx  SEOManager.tsx  Settings.tsx
src/services/: aiService.ts  mediaService.ts  projectService.ts  seoService.ts  settingsService.ts  tauri.ts  types.ts
src/store/: mediaStore.ts  projectStore.ts  settingsStore.ts  toastStore.ts
src/types/: ai.ts  index.ts  media.ts  project.ts  seo.ts
src/utils/: fileTypes.ts  validation.ts
