[package]
name = "realisation-manager-ai"
version = "1.0.0"
description = "Local AI-powered media organiser for Mariën Sanitair en Centrale Verwarming"
authors = ["Mariën Sanitair en Centrale Verwarming"]
license = "MIT"
edition = "2021"
rust-version = "1.75"

[lib]
name = "realisation_manager_ai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
# Tauri core
tauri = { version = "2.0", features = ["protocol-asset"] }
tauri-plugin-dialog = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-shell = "2.0"

# Database
rusqlite = { version = "0.31", features = ["bundled", "blob", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
refinery = { version = "0.8", features = ["rusqlite"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async / concurrency
tokio = { version = "1", features = ["full"] }
rayon = "1.10"
parking_lot = "0.12"
crossbeam-channel = "0.5"

# Errors & logging
thiserror = "1"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

# Media / image processing
image = "0.25"
kamadak-exif = "0.5"
infer = "0.15"
walkdir = "2.5"
notify = "6.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs / hashing
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
blake3 = "1.5"

# Geocoding (offline, using local dataset)
# Note: reverse-geocoding uses a bundled static dataset, no network calls

# AI / ONNX
ort = { version = "2.0", features = ["download-binaries", "cuda"] }
ndarray = "0.16"
tokenizers = "0.19"

# OCR
# Tesseract via Rust bindings (leptonica-sys requires tesseract installed on the system)
tesseract-rs = "0.3"
leptonica-sys = "0.4"

# CSV / Excel export
csv = "1.3"

# Misc
once_cell = "1.19"
regex = "1.10"
slug = "0.1"
unicode-segmentation = "1.11"
itertools = "0.13"

[features]
# This feature is used for production builds where `devPath` points to the bundled app
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
